Projects/FibonaciAppMultiComponentImage/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
    #these lines will go to k8 and ask for volume claim in local hard drive and get persisistent storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
          #checks above volume section for this mount
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              #sub folder within the mount 
              subPath: postgres
#using --- one can put together multiple configuraions in one yaml file
---
