Projects/FibonaciAppMultiComponentImage/k8s/ingress-service.yml
#routing traffic from external world to internal pods
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  #additional configuration options
  annotations:
  #means creating ingress controller based on nginx project
    kubernetes.io/ingress.class: nginx
  #this tells how nginx should behave, basically rewrites some string in calls
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
    #routing rules according to url requested from client
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
